[tool.poetry]
name = "myopenstreetmap"
version = "0.1.0"
description = ""
authors = ["H. Felix Wittmann <hfwittmann@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
OSMPythonTools = "^0.3.4"
ipykernel = "^6.13.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
